<resources>
    <string name="app_name">MelodyGram</string>
    <string name="google_app_id1">816985527669</string>
    <string name="google_api_key1">AIzaSyAkWB_-sqzCOu2zzi2i7LyDr-T60NgFgSs</string>
    <string name="ot_verification">OTP VERIFICATION</string>
    <string name="enter_mobile_hint">Mobile number</string>
    <string name="verify">Verify</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="contacts">Contacts</string>
    <string name="chat">Chats</string>
    <string name="profile">Profile</string>
    <string name="title_activity_country">CountryActivity</string>
    <string name="country">Country</string>
    <string name="mobile_number_error">Enter mobile number</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="pic_upload_failed">Failed to upload pic</string>
    <string name="server_error">Low internet connection</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today </string>
    <string name="invite">Invite </string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="existing">Existing Photo</string>
    <string name="camera">Camera</string>
    <string name="share_msg">Check out MelodyGram, The messaging app with background music and disappearing options. Download it now and enjoy your voice communication with background music! <href>https://play.google.com/store/apps/details?id=melodygram.com.melodygram&amp;hl=en</href></string>
    <string name="app_not_found">App not installed</string>
    <string name="folder">Folder</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="fileSize">File Size</string>
    <string name="currentDir">Current Dir</string>
    <string name="old_profile">Profile Pic</string>
    <string name="not_valid_otp">OTP not valid</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="locate_top">Locate on Top</string>
    <string name="search">Search</string>
    <string name="clear_chat">Clear chat</string>
    <string name="chat_theme">Chat theme</string>
    <string name="profile_pic_updated">Profile picture updated successfully</string>
    <string name="pdf">Doc File</string>
    <string name="pdf_file">PDF File</string>
    <string name="zip_file">Zip File</string>
    <string name="add_music">Say it with music</string>
    <string name="block">Block</string>
    <string name="load_earlier_messages">Load earlier messages</string>
    <string name="typing_text">typing...</string>
    <string name="new_messages">You have</string>
    <string name="messages_text">unread messages</string>
    <string name="one_message_text">unread message</string>
    <string name="and_you">and You</string>
    <string name="last_seen_text">Last Online:</string>
    <string name="at_text">at</string>
    <string name="online_text">Online</string>
    <string name="chat_disappear">Chat disappear</string>
    <string name="disappear">Disappear</string>
    <string name="send_music">Send</string>
    <string name="cancel">Cancel</string>
    <string name="type_here">Type here...</string>
    <string name="ok">Ok</string>
    <string name="location">Location</string>
    <string name="chat_message">Do you really want to clear your messages?</string>
    <string name="deactivate_message">Do you really want to deactivate your number?</string>
    <string name="location_share">Do you want to share your Location ?</string>
    <string name="cant_get_location">Can\'t get your current Location</string>
    <string name="cant_select_images">Can\'t select more than 10 images</string>
    <string name="description">Description</string>
    <string name="title_activity_themes">ThemesActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="set_theme">Set</string>
    <string name="copied">Copied</string>
    <string name="notification_settings">Notification Alert</string>
    <string name="blocked_list">Blocked List</string>
    <string name="email_settings">Email Chat History</string>
    <string name="clear_chat_history">Clear Chat History</string>
    <string name="privacy">Privacy</string>
    <string name="change_number">Change Number</string>
    <string name="deactivate_number">Deactivate Number</string>
    <string name="about">About</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="version_no">Beta Version</string>
    <string name="year">2016 - 2017</string>
    <string name="message_notification">Message Notification</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="failed">Failed</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="unblock">UnBlock</string>
    <string name="unblock_user_to_chat">Unblock your friend to chat</string>
    <string name="not_blocked">You have not blocked any friend</string>
    <string name="last_seen">Last Online</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="privacy_message">If you don\'t share your last online, you won\'t be able to see other people\'s last online</string>
    <string name="everybody">Everybody</string>
    <string name="nobody">Nobody</string>
    <string name="status">Status</string>
    <string name="contact">Contact only</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="select_friends">Select Friends</string>
    <string name="old_number">Old Number</string>
    <string name="new_number">New Number</string>
    <string name="enter_old_number">Enter old number</string>
    <string name="code">Enter OTP</string>
    <string name="change">Change</string>
    <string name="new_old_number">Enter new number</string>
    <string name="file_size_error"><![CDATA[<item name=\"fPlease select file less than or equal to 10MB]]></string>
    <string name="no_application">No application available to view this file</string>
    <string name="file_missing">File Missing</string>
    <string name="download_music_here">You can download music here</string>
    <string name="music_store">Music Store</string>
    <string name="your_playlist">Your Playlists</string>
    <string name="track">Tracks</string>
    <string name="permission_not_granted">Permission denied</string>
    <string name="enter_name">Enter name</string>
    <string name="failed_melody">Failed to create Melody</string>
    <string name="melody_create">Melody created successfully</string>
    <string name="creating_melody">Creating your Melody..</string>
    <string name="global_tracker">UA-76256908-3</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string-array name="status_array">
        <item> Available</item>
        <item> Busy</item>
        <item> At School</item>
        <item> At the movies</item>
        <item> At work</item>
        <item> Sleeping</item>


    </string-array>
</resources>