<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header_layout" />

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding_size">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_number"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size" />


        </RelativeLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/small_padding_size"
            android:layout_marginRight="@dimen/small_padding_size"
            android:background="@color/light_app_color" />


        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding_size">

            <TextView
                android:id="@+id/old_number_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_number"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/old_number_parent"
                android:background="@drawable/white_btn_bg"
                android:layout_marginTop="@dimen/small_margin_size"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/old_number_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:layout_marginLeft="@dimen/small_margin_size"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:textColor="@android:color/black"
                  android:text="+91" />

                <EditText
                    android:id="@+id/old_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin_size"
                    android:maxLength="10"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/medium_text_size"
                    android:editable="false"
                    android:background="@null"
                    android:hint="@string/enter_old_number"/>
            </LinearLayout>


        </RelativeLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/small_padding_size"
            android:layout_marginRight="@dimen/small_padding_size"
            android:background="@color/light_app_color" />
        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding_size">

            <TextView

                android:id="@+id/new_number_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_number"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/new_number_parent"
                android:background="@drawable/white_btn_bg"
                android:layout_marginTop="@dimen/small_margin_size"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/new_number_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:editable="false"
                    android:layout_marginLeft="@dimen/small_margin_size"
                    android:textSize="@dimen/medium_text_size"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:text="+91"/>

                <EditText
                    android:id="@+id/new_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginLeft="@dimen/small_margin_size"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/medium_text_size"
                    android:background="@null"
                    android:hint="@string/new_old_number"/>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_size"
            android:background="@color/app_color"
            android:padding="@dimen/small_margin_size"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/change"/>

        <LinearLayout
            android:id="@+id/otp_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/small_margin_size"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_margin_size"
                android:textSize="@dimen/large_text_size"
                android:background="@drawable/white_btn_bg"
                android:hint="@string/code"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin_size"
                android:background="@color/app_color"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:text="@string/verify"/>


        </LinearLayout>





    </LinearLayout>



</ScrollView>