<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/extra_large_margin_size"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"></ImageView>>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/large_margin_size"
                    android:text="@string/ot_verification"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/large_text_size"></TextView>


                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:layout_marginLeft="@dimen/large_margin_size"
                    android:layout_marginRight="@dimen/large_margin_size"
                    android:layout_marginTop="@dimen/large_margin_size"

                    android:background="@drawable/white_btn_bg"
                    android:gravity="center"
                    android:hint="@string/otp"

                    android:inputType="number"
                    android:maxLength="8"
                    android:minHeight="@dimen/min_height"
                    android:paddingLeft="@dimen/small_padding_size"
                    android:textColor="@color/app_color"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/large_text_size"></EditText>


                <Button
                    android:id="@+id/verify_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_margin_size"
                    android:layout_marginRight="@dimen/large_margin_size"
                    android:layout_marginTop="@dimen/large_margin_size"
                    android:background="@drawable/login_btn"
                    android:text="@string/verify"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/large_text_size"></Button>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin_size"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/back_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/large_margin_size"
                        android:singleLine="true"
                        android:text="@string/back_to_login"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/medium_text_size"></TextView>

                    <View
                        android:layout_width="@dimen/login_btn_resend_otp_space"
                        android:layout_height="wrap_content"></View>

                    <TextView
                        android:id="@+id/resend_otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/large_margin_size"
                        android:singleLine="true"
                        android:text="@string/resend_otp"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/medium_text_size"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
