<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:padding="@dimen/small_padding_size"
        android:text="@string/disappear"
        android:textColor="@android:color/white"
        android:textSize="@dimen/medium_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin_size"
        android:layout_marginTop="@dimen/small_margin_size"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/medium_margin_size">

        <RadioButton
            android:id="@+id/on_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/medium_margin_size"
            android:paddingRight="@dimen/small_padding_size"
            android:text="@string/on"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text_size" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/small_padding_size"
            android:layout_marginRight="@dimen/small_padding_size"
            android:layout_marginTop="@dimen/small_margin_size"
            android:background="@color/light_app_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin_size"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/medium_margin_size">
        <RadioButton
            android:id="@+id/off_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/small_padding_size"
            android:paddingRight="@dimen/small_padding_size"
            android:text="@string/off"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/small_padding_size"
            android:layout_marginRight="@dimen/small_padding_size"
            android:layout_marginTop="@dimen/small_margin_size"
            android:background="@color/light_app_color" />
    </LinearLayout>

</LinearLayout>
